--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-in<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Simon</title>
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="js/soundmanager/script/soundmanager2.js"></script>
-	<script src="js/intro.js"></script>
-	<script src="js/display.js"></script>
 	<script src="js/gameplay.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/simon.css">
 	<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
